qk: Translate all Chinese to English
- Translate CLI comments and descriptions to English
- Update package.json description to English
- Update hello-world command description to English
- Standardize error messages to English
- All future input/output will be in English

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qk",
   "version": "1.0.0",
-  "description": "乾坤 CLI",
+  "description": "QK CLI - A powerful command-line tool built with ZX and Commander.js",
   "type": "module",
   "main": "cli.mjs",
   "bin": {
