--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@langchain/core": "^1.1.8",
     "commander": "^12.1.0",
     "zx": "^8.8.5"
   },
