--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "commander",
     "tool"
   ],
-  "author": "",
+  "author": "choufeng",
   "license": "MIT",
   "dependencies": {
     "@langchain/core": "^1.1.8",
@@ -33,10 +33,10 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/choufeng/qk.git"
   },
-  "homepage": "",
+  "homepage": "https://github.com/choufeng/qk#readme",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/choufeng/qk/issues"
   }
 }
